# notes-api

./: .env  .gitignore  Cargo.toml  notes.db
migrations/2023-06-15-154253_create_notes/: up.sql
src/: lib.rs  main.rs  models.rs  schema.rs
