[package]
name = "notes_app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.18"
diesel = { version = "2.1.0", features = ["sqlite", "returning_clauses_for_sqlite_3_35"] }
dotenv = "0.15.0"
tokio = { version = "1.28.2", features = ["macros", "rt-multi-thread"] }
